# lolchecker

./: .env.example  .gitignore  NEXT_STEPS.md  README.md  RULES.md  masterplan-lol-champ-assistant-v3.md  pyproject.toml
.github/workflows/: build.yml  nightly.yml  test.yml
data/: builds.json  counters.json  tags.json  tiers.json
docs/: ARCHITECTURE.md  CONTINUATION.md  OPTIMIZATION.md  manual_test_checklist.md
scripts/: bench.py  build_windows.spec  demo_overlays.py  preview.py  telemetry_summary.py  update.bat
src/champ_assistant/: __init__.py  __main__.py  app.py  app_paths.py  boot.py  bootstrap_installer.py  cli.py  coalescer.py  config.py  crash_report.py  diagnostics.py  health_monitor.py  hotkey_config.py  hotkey_service.py  jungle_timeline.py  layout.py  lifecycle.py  logging_setup.py  overlay_config.py  performance_monitor.py  render_scheduler.py  runtime_factory.py  safe_mode.py  safety.py  secrets.py  session_summary.py  state_store.py  state_validator.py  tasks.py  telemetry.py  update_check.py  update_snooze.py  view_builder.py  window_flags.py
src/champ_assistant/advisor/: __init__.py  ban_suggestions.py  build_adapter.py  build_engine.py  claude.py  coach_voice.py  composition.py  counter_tips.py  counters.py  decision_engine.py  game_plan_llm.py  picks.py  role_inference.py  win_condition.py
src/champ_assistant/data/: __init__.py  champion_scaling.py  datadragon.py  items_data.py  loader.py  lolalytics_counters.py  meraki.py  models.py  perks_data.py  refresh.py  runtime_counters.py
src/champ_assistant/game/: __init__.py  gold_diff_service.py
src/champ_assistant/lcda/: __init__.py  active_state.py  client.py  gank_window.py  lane_state.py  objectives.py  players.py  power_spikes.py  source.py  tilt.py  (+1 more)
static/: .tiers_refreshed_at  tiers.json
tests/: conftest.py
tests/fixtures/: champions.json
tests/game/: test_gold_diff_service.py  test_spell_timer_click.py
tests/integration/: conftest.py  test_orchestrator.py
tests/lint/: test_coach_voice_lint.py  test_design_lockdown.py  test_no_input_hooks.py  test_rules_catalog.py  test_suppression_table.py  test_typing_escape_hatches.py
tests/perf/: test_cold_start.py
tests/property/: conftest.py  test_counters_properties.py  test_picks_properties.py
tests/soak/: conftest.py  test_longevity.py
tests/ui/: test_click_to_hover.py  test_enemy_row_main_icons.py  test_insight_panel.py  test_live_companion_wires.py  test_map_overlay_layer.py  test_minimap_timers_widget.py  test_objective_panel.py  test_overlay_smoke.py  test_pick_ban_layout.py  test_recommendation_panel.py  test_roster_panel.py  test_scoreboard_gold_diff.py  test_scoreboard_widget_user_enabled.py  test_settings_dialog.py  test_summoner_tracker.py  test_team_strip_interaction.py
tests/unit/: test_active_bounty.py  test_active_state.py  test_ally_bounty.py  test_ally_profile_fetch.py  test_app_paths.py  test_ban_suggestions.py  test_build_adapter.py  test_build_engine.py  test_builds.py  test_claude.py  test_coalescer.py  test_composition.py  test_counter_tips.py  test_counters.py  test_crash_report.py  test_datadragon.py  test_decision_engine.py  test_enemy_bounty.py  test_engine_debug.py  test_enriched_counters.py  test_first_blood.py  test_gank_window.py  test_health_monitor.py  test_hotkey_config.py  test_hotkey_service.py  test_item_sets.py  test_jungle_timeline.py  test_lane_state.py  test_layout.py  test_lcda_client.py  test_lcda_objectives.py  test_lcda_players.py  test_lcda_source.py  test_lcu_champ_select_hover.py  test_lcu_client.py  test_lcu_events.py  test_lcu_sources.py  test_lcu_window.py  test_lifecycle.py  test_loader.py  (+40 more)
tests/vision/: test_color_presence.py  test_scoreboard_detection.py  test_service_lifecycle.py  test_transition_detection.py
tests/visual/: _snapshot.py  coverage.py  test_coverage.py  test_widget_snapshots.py
(+90 files in other folders)
