[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "champ-assistant"
version = "1.10.44"
description = "LoL Champ Select Assistant — Live counters, team-comp picks via LCU."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Dennis Edlich" }]
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
    "pydantic>=2.6",
    "anthropic>=0.40",
    "PyQt6>=6.7",
    "qasync>=0.27",
    "diskcache>=5.6",
    "python-dotenv>=1.0",
    "keyring>=25",
    "structlog>=24.1",
    # psutil — used as the fallback lockfile finder on Windows. Process
    # introspection is the only reliable way to handle non-default
    # installation directories.
    "psutil>=5.9",
    # Vision subsystem (Stage A — color heuristic camp detection).
    # numpy + mss are required at install time so the feature works
    # when the user enables it via settings; the feature itself is
    # disabled by default. mss only does anything useful on Windows.
    "numpy>=1.26",
    "mss>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4",
    "pytest-cov>=5",
    "pytest-timeout>=2.3",
    "psutil>=5.9",
    "respx>=0.21",
    "hypothesis>=6.100",
    "aiohttp>=3.9",
    "ruff>=0.5",
    "mypy>=1.10",
    # Profiling tools — masterplan §9 lists both for Soak/Profiling.
    # memray does not support Windows (RuntimeError at build time), so gate it.
    "py-spy>=0.3",
    'memray>=1.13; sys_platform != "win32"',
]
build = [
    "pyinstaller>=6.6",
]

[project.scripts]
champ-assistant = "champ_assistant.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
champ_assistant = ["py.typed"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    # Soak tests are opt-in — run explicitly with `pytest tests/soak`.
    # Default CI / dev runs skip them since they take minutes / hours.
    "--ignore=tests/soak",
]
timeout = 30
markers = [
    "slow: tests that take more than a second",
    "soak: long-running stability tests (opt-in)",
    "windows_only: only meaningful on Windows runners",
]

[tool.coverage.run]
branch = true
source = ["champ_assistant"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "RUF",              # ruff-specific
]
ignore = [
    "E501",             # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
mypy_path = "src"
packages = ["champ_assistant"]
exclude = ["build/", "dist/"]

[[tool.mypy.overrides]]
module = ["qasync.*", "diskcache.*", "keyring.*"]
ignore_missing_imports = true
